add: POST importNoteMetadata
